--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -72,29 +72,31 @@
       </div>
     </div>
 
-    <div id="news" class="container">
-      <div class="flex__item">
-        <h2 class="commn__ttl">ニュース</h2>
-        <a href="news.html" class="news__btn">ニュース一覧を見る</a>
+    <div id="news">
+      <div class="container">
+        <div class="flex__item">
+          <h2 class="common__ttl">ニュース</h2>
+          <a href="news.html" class="news__btn">ニュース一覧を見る</a>
+        </div>
+        <ul class="news__list">
+          <li class="news__list-item">
+            <span class="news__list-data">2019/07/17</span>
+            <span class="news__list-detail">会社を創業しました。</span>
+          </li>
+          <li class="news__list-item">
+            <span class="news__list-data">2020/04/01</span>
+            <span class="news__list-detail">資金調達を行いました。</span>
+          </li>
+          <li class="news__list-item">
+          <span class="news__list-data">2020/10/01</span>
+          <span class="news__list-detail">東京新聞に掲載されました。</span>
+          </li>
+        </ul>
       </div>
-      <ul class="news__list">
-        <li>
-          <span class="news__list-data">2019/07/17</span>
-          <span class="news__list-detail">会社を創業しました。</span>
-        </li>
-        <li>
-          <span class="news__list-data">2020/04/01</span>
-          <span class="news__list-detail">資金調達を行いました。</span>
-        </li>
-        <li>
-        <span class="news__list-data">2020/10/01</span>
-        <span class="news__list-detail">東京新聞に掲載されました。</span>
-        </li>
-      </ul>
     </div>
 
     <div id="blog" class="container">
-      <h2 class="blog__ttl">社員ブログ</h2>
+      <h2 class="common__ttl">社員ブログ</h2>
       <div class="flex__item blog-wrap">
         <a class="blog-wrap__item" href>
           <div class="blog1">
@@ -123,17 +125,17 @@
 
     <div id="company-recruit">
       <div class="flex__item">
-        <a href="company.html">
+        <a href="company.html" class="flex__item-company">
           <h2 class="company__ttl">会社概要</h2>
         </a>
-        <a href="recruit.html">
+        <a href="recruit.html" class="flex__item-recruit">
           <h2 class="recruit__ttl">採用情報</h2>
         </a>
       </div>
     </div>
    
     <div id="contact">
-      <h2 class="contact__ttl">お問い合わせ</h2>
+      <h2 class="common__ttl">お問い合わせ</h2>
       <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
       <a href="contact.html" class="contact__btn">お問い合わせ</a>
     </div>
