--- a/20220518tomita/service.html
+++ b/20220518tomita/service.html
@@ -11,16 +11,15 @@
 </head>
 
 <body>
-
-  <header class="header">
-    <h1 class="header-ttl">
+  <header class="header flex__item">
+    <div class="header__logo">
       <a href="index.html">
-        <img src="./img/logo.png" alt>
+        <img src="img/logo.png" alt>
       </a>
-    </h1>
+    </div>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="index.html">ホーム</a></li>
+        <li class="header-nav-item fle"><a href="index.html">ホーム</a></li>
         <li class="header-nav-item"><a href="sservice.html">事業内容</a></li>
         <li class="header-nav-item"><a href="news.html">ニュース</a></li>
         <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
@@ -32,11 +31,14 @@
   </header>
 
 
+  
+
+
   <h1 service__ttl>事業内容</h1> 
 
   <div class="flex__item service1__item">
     <div class="service1__item-img">
-      <img src="./img/service1.png" alt>
+      <img src="img/service1.png" alt>
     </div>
     <div class="service1__item-content">
     <h2 class="service1__ttl">IT人材育成事業</h2>
