--- a/20220518tomita/service.html
+++ b/20220518tomita/service.html
@@ -33,46 +33,49 @@
 
   
 
-
-  <h1 service__ttl>事業内容</h1> 
-
-  <div class="flex__item service1__item">
-    <div class="service1__item-img">
-      <img src="img/service1.png" alt>
-    </div>
-    <div class="service1__item-content">
-    <h2 class="service1__ttl">IT人材育成事業</h2>
-    <p class="service1__content">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
-    </div>
+  <div class="common__ttl">
+   <h1 service__ttl>事業内容</h1> 
   </div>
 
-  <div class="flex__item service2__item">
-    <div class="service2__item-img">
-      <img src="./img/service2.png" alt>
+  <div class="container">
+    <div class="flex__item service__item">
+      <div class="service__item-img">
+        <img src="img/service1.png" alt>
+      </div>
+      <div class="service__item-content">
+        <h2 class="service__item-ttl">IT人材育成事業</h2>
+        <p class="service__item-text">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
+      </div>
     </div>
-    <div class="service2__item-content">
-      <h2 class="service2__ttl">コーチング事業</h2>
-      <p class="service2__content">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
+
+    <div class="flex__item service__item">
+      <div class="service__item-img">
+        <img src="img/service2.png" alt>
+      </div>
+      <div class="service__item-content">
+        <h2 class="service__item-ttl">コーチング事業</h2>
+        <p class="service__item-text">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
+      </div>
     </div>
-  </div>
-  
-  <div class="flex__item service3__item">
-    <div class="service3__item-img">
-      <img src="./img/service3.png" alt>
-    </div>
-    <div class="service3__item-content">
-      <h2 class="service3__ttl">ITコンサル事業</h2>
-      <p class="service3__content">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営サポートをします。</p>
-    </div>
-  </div>
     
-  <div class="flex__item service4__item">
-    <div class="service4__item-img">
-      <img src="./img/service4.png" alt>
+    <div class="flex__item service__item">
+      <div class="servic__item-img">
+        <img src="img/service3.png" alt>
+      </div>
+      <div class="service__item-content">
+        <h2 class="service__item-ttl">ITコンサル事業</h2>
+        <p class="service__item-text">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営サポートをします。</p>
+      </div>
     </div>
-    <div class="service4__item-content">
-      <h2 class="service4__ttl">デジタルトランスフォーメーション事業</h2>
-      <p class="service4__content">人々の生活世より良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
+      
+    <div class="flex__item service__item">
+      <div class="service__item-img">
+        <img src="img/service4.png" alt>
+      </div>
+      <div class="service__item-content">
+        <h2 class="service__item-ttl">デジタルトランスフォーメーション事業</h2>
+        <p class="service__item-text">人々の生活世より良いものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
+      </div>
     </div>
   </div>
 
