--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -148,13 +148,13 @@
       <small class="copyright">&copy;2020 TECH inc</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
-          <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-          <li class="header-nav-item"><a href="service.html">事業内容</a></li>
-          <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-          <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-          <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-          <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-          <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+          <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
