--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -33,9 +33,11 @@
 
   <main>
     <div class="firstview">
-      <div class="firstview_content">
-        <h1 class="firstview__content-eyecatch">最新のテクノロジーで社会課題を解決</h1>
-        <p class="firstview__content-sub-copy">Solving social issues with the latest technology</p>
+      <div class="firstview__background">
+        <div class="firstview__content">
+          <h1 class="firstview__content-eyecatch">最新のテクノロジーで社会課題を解決</h1>
+          <p class="firstview__content-sub-copy">Solving social issues with the latest technology</p>
+        </div>
       </div>
       <div class="secondview__content">
         <h2 class="secondview__content-eyecatch">株式会社TECHの想い</h2>
