--- a/20220518tomita/service.html
+++ b/20220518tomita/service.html
@@ -34,7 +34,7 @@
   
 
   <div class="common__ttl">
-   <h1 service__ttl>事業内容</h1> 
+   <h1 class="service__ttl">事業内容</h1> 
   </div>
 
   <div class="container">
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <div class="contact">
+  <div id="contact">
     <h2 class="contact__ttl">お問い合わせ</h2>
     <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
     <a href="contact.html" class="contact__btn">お問い合わせ</a>
