--- a/20220518tomita/news.html
+++ b/20220518tomita/news.html
@@ -15,7 +15,7 @@
   <header class="header">
     <h1 class="header-ttl">
       <a href="index.html">
-        <img src="./img/logo.png" alt>
+        <img src="../img/logo.png" alt>
       </a>
     </h1>
     <nav class="header-nav">
@@ -49,22 +49,29 @@
       </li>
     </ul>
   </div>
+
+  <div id="contact">
+    <h2 class="contact__ttl">お問い合わせ</h2>
+    <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+    <a href="contact.html" class="contact__btn">お問い合わせ</a>
+  </div>
   
   <footer class="footer">
     <div class="footer-inner">
       <small class="copyright">&copy;2020 TECH inc</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
-          <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-          <li class="header-nav-item"><a href="service.html">事業内容</a></li>
-          <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-          <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-          <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-          <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-          <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+          <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+          <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+          <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+          <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+          <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
   </footer>
+
 </body>
 </html>
