--- a/20220518tomita/news.html
+++ b/20220518tomita/news.html
@@ -11,16 +11,15 @@
 
 </head>
 <body>
-
-  <header class="header">
-    <h1 class="header-ttl">
+  <header class="header flex__item">
+    <div class="header__logo">
       <a href="index.html">
-        <img src="../img/logo.png" alt>
+        <img src="img/logo.png" alt>
       </a>
-    </h1>
+    </div>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="index.html">ホーム</a></li>
+        <li class="header-nav-item fle"><a href="index.html">ホーム</a></li>
         <li class="header-nav-item"><a href="sservice.html">事業内容</a></li>
         <li class="header-nav-item"><a href="news.html">ニュース</a></li>
         <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
@@ -31,47 +30,55 @@
     </nav>
   </header>
 
-  <h1 news__ttl>ニュース</h1>
-
-  <div class="news">
-    <ul class="news__list">
-      <li>
-        <span class="news__list-data">2019/07/17</span>
-        <span class="news__list-detail">会社を創業しました。</span>
-      </li>
-      <li>
-        <span class="news__list-data">2020/04/01</span>
-        <span class="news__list-detail">資金調達を行いました。</span>
-      </li>
-      <li>
-        <span class="news__list-data">2020/10/01</span>
-        <span class="news__list-detail">東京新聞に掲載されました。</span>
-      </li>
-    </ul>
-  </div>
-
-  <div id="contact">
-    <h2 class="contact__ttl">お問い合わせ</h2>
-    <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
-    <a href="contact.html" class="contact__btn">お問い合わせ</a>
-  </div>
-  
-  <footer class="footer">
-    <div class="footer-inner">
-      <small class="copyright">&copy;2020 TECH inc</small>
-      <nav class="footer-nav">
-        <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
-          <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
-          <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
-          <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
-          <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
-          <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
-          <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
-        </ul>
-      </nav>
+  <main>
+    <div class="common__ttl">
+      <h1 class="news__ttl">ニュース</h1>
     </div>
-  </footer>
+    
+
+    <div class="container">
+      <ul class="news__list">
+        <li class="news__list-item">
+          <span class="news__list-data">2019/07/17</span>
+          <span class="news__list-detail">会社を創業しました。</span>
+        </li>
+        <li class="news__list-item">
+          <span class="news__list-data">2020/04/01</span>
+          <span class="news__list-detail">資金調達を行いました。</span>
+        </li>
+        <li class="news__list-item">
+          <span class="news__list-data">2020/10/01</span>
+          <span class="news__list-detail">東京新聞に掲載されました。</span>
+        </li>
+      </ul>
+    </div>
+
+    <div id="contact">
+      <h2 class="contact__ttl">お問い合わせ</h2>
+      <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+      <a href="contact.html" class="contact__btn">お問い合わせ</a>
+    </div>
+
+  </main>
+  
+  <div class="container">
+    <footer class="footer">
+      <div class="footer-inner">
+        <small class="copyright">&copy;2020 TECH inc</small>
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
+            <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
+            <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
+            <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
+            <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
+            <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
+            <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </div>
 
 </body>
 </html>
