--- a/20220518tomita/blog.html
+++ b/20220518tomita/blog.html
@@ -10,96 +10,103 @@
   <link rel="stylesheet" href="css/blog.css">
 </head>
 <body>
-
-  <header class="header">
-    <h1 class="header-ttl">
+  <header class="header flex__item">
+    <div class="header__logo">
       <a href="index.html">
-        <img src="./img/logo.png" alt>
+        <img src="img/logo.png" alt>
       </a>
-    </h1>
+    </div>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="sservice.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+        <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
+        <li class="header-nav-item"><a href="sservice.html" class="header-nav-a">事業内容</a></li>
+        <li class="header-nav-item"><a href="news.html" class="header-nav-a">ニュース</a></li>
+        <li class="header-nav-item"><a href="blog.html" class="header-nav-a">社員ブログ</a></li>
+        <li class="header-nav-item"><a href="company.html" class="header-nav-a">会社概要</a></li>
+        <li class="header-nav-item"><a href="recruit.html" class="header-nav-a">採用情報</a></li>
+        <li class="header-nav-item"><a href="contact.html" class="header-nav-a">お問い合わせ</a></li>
       </ul>
     </nav>
   </header>
 
 
-  <h1 class="blog__ttl">社員ブログ</h1>
+  <main>
+    <div class="common__ttl">
+      <h1 class="blog__ttl">社員ブログ</h1>
+    </div>
 
-  <div class="flex__item blog-wrap">
-    <a class="blog-wrap__item" href>
-      <div class="blog1">
-        <img src="/20220518tomita/CS/img/blog.png" alt>
-        <p class="blog1-data">2019/07/17</p>
-        <h3 class="blog1__ttl">会社を創業した理由</h3>
+    <div id="blog" class="container">
+      <div class="flex__item blog-wrap">
+        <a class="blog-wrap__item" href>
+          <div class="blog">
+            <img src="img/blog.png" alt>
+            <p class="blog-data">2019/07/17</p>
+            <h3 class="blog__ttl">会社を創業した理由</h3>
+          </div>
+        </a>
+        <a class="blog-wrap__item" href>
+          <div class="blog">
+            <img src="img/blog.png" alt>
+            <p class="blog-data">2019/11/11</p>
+            <h3 class="blog__ttl">ITエンジニアを育成する最強メソッド</h3>
+          </div>
+        </a>
+        <a class="blog-wrap__item" href>
+          <div class="blog">
+            <img src="img/blog.png" alt>
+            <p class="blog-data">2020/08/01</p>
+            <h3 class="blog__ttl">コーチングによるモチベーション向上理論</h3>
+          </div>
+        </a>
+        <a class="blog-wrap__item" href>
+          <div class="blog">
+            <img src="img/blog.png" alt>
+            <p class="blog-data">2020/09/10</p>
+            <h3 class="blog__ttl">プログラミング言語習得論</h3>
+          </div>
+        </a>
+        <a class="blog-wrap__item" href>
+          <div class="blog">
+            <img src="img/blog.png" alt>
+            <p class="blog-data">2020/12/01</p>
+            <h3 class="blog__ttl">エンジニア採用における注意点</h3>
+          </div>
+        </a>
+        <a class="blog-wrap__item" href>
+          <div class="blog">
+            <img src="img/blog.png" alt>
+            <p class="blog-data">2021/01/01</p>
+            <h3 class="blog__ttl">今年の抱負</h3>
+          </div>
+        </a>
       </div>
-    </a>
-    <a class="blog-wrap__item" href>
-      <div class="blog2">
-        <img src="/20220518tomita/CS/img/blog.png" alt>
-        <p class="blog2-data">2019/11/11</p>
-        <h3 class="blog2__ttl">ITエンジニアを育成する最強メソッド</h3>
-      </div>
-    </a>
-    <a class="blog-wrap__item" href>
-      <div class="blog3">
-        <img src="/20220518tomita/CS/img/blog.png" alt>
-        <p class="blog3-data">2020/08/01</p>
-        <h3 class="blog3__ttl">コーチングによるモチベーション向上理論</h3>
-      </div>
-    </a>
-    <a class="blog-wrap__item" href>
-      <div class="blog4">
-        <img src="/20220518tomita/CS/img/blog.png" alt>
-        <p class="blog4-data">2020/09/10</p>
-        <h3 class="blog4__ttl">プログラミング言語習得論</h3>
-      </div>
-    </a>
-    <a class="blog-wrap__item" href>
-      <div class="blog5">
-        <img src="/20220518tomita/CS/img/blog.png" alt>
-        <p class="blog5-data">2020/12/01</p>
-        <h3 class="blog5__ttl">エンジニア採用における注意点</h3>
-      </div>
-    </a>
-    <a class="blog-wrap__item" href>
-      <div class="blog6">
-        <img src="/20220518tomita/CS/img/blog.png" alt>
-        <p class="blog6-data">2021/01/01</p>
-        <h3 class="blog6__ttl">今年の抱負</h3>
-      </div>
-    </a>
-  </div>
- 
-  <div class="contact">
-    <h2 class="contact__ttl">お問い合わせ</h2>
-    <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
-    <a href="contact.html" class="contact__btn">お問い合わせ</a>
-  </div>
+    </div>
+  
+    <div class="contact">
+      <h2 class="contact__ttl">お問い合わせ</h2>
+      <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+      <a href="contact.html" class="contact__btn">お問い合わせ</a>
+    </div>
+  </main>
 
-<footer class="footer">
-  <div class="footer-inner">
-    <small class="copyright">&copy;2020 TECH inc</small>
-    <nav class="footer-nav">
-      <ul class="footer-nav-list">
-        <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="service.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
-      </ul>
-    </nav>
-  </div>
-</footer>
+    <div class="container">
+      <footer class="footer">
+        <div class="footer-inner">
+          <small class="copyright">&copy;2020 TECH inc</small>
+          <nav class="footer-nav">
+            <ul class="footer-nav-list">
+              <li class="header-nav-item"><a href="index.html">ホーム</a></li>
+              <li class="header-nav-item"><a href="service.html">事業内容</a></li>
+              <li class="header-nav-item"><a href="news.html">ニュース</a></li>
+              <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
+              <li class="header-nav-item"><a href="company.html">会社概要</a></li>
+              <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
+              <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
+    </div>
 
 </body>
 </html>
