--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -20,13 +20,13 @@
     </div>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item fle"><a href="index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="sservice.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+        <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
+        <li class="header-nav-item"><a href="sservice.html" class="header-nav-a">事業内容</a></li>
+        <li class="header-nav-item"><a href="news.html" class="header-nav-a">ニュース</a></li>
+        <li class="header-nav-item"><a href="blog.html" class="header-nav-a">社員ブログ</a></li>
+        <li class="header-nav-item"><a href="company.html" class="header-nav-a">会社概要</a></li>
+        <li class="header-nav-item"><a href="recruit.html" class="header-nav-a">採用情報</a></li>
+        <li class="header-nav-item"><a href="contact.html" class="header-nav-a">お問い合わせ</a></li>
       </ul>
     </nav>
   </header>
@@ -150,13 +150,13 @@
       <small class="copyright">&copy;2020 TECH inc</small>
       <nav class="footer-nav">
         <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="index.html">ホーム</a></li>
-          <li class="footer-nav-item"><a href="service.html">事業内容</a></li>
-          <li class="footer-nav-item"><a href="news.html">ニュース</a></li>
-          <li class="footer-nav-item"><a href="blog.html">社員ブログ</a></li>
-          <li class="footer-nav-item"><a href="company.html">会社概要</a></li>
-          <li class="footer-nav-item"><a href="recruit.html">採用情報</a></li>
-          <li class="footer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+          <li class="footer-nav-item"><a href="index.html" class="footer-nav-a">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html" class="footer-nav-a">事業内容</a></li>
+          <li class="footer-nav-item"><a href="news.html" class="footer-nav-a">ニュース</a></li>
+          <li class="footer-nav-item"><a href="blog.html" class="footer-nav-a">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html" class="footer-nav-a">会社概要</a></li>
+          <li class="footer-nav-item"><a href="recruit.html" class="footer-nav-a">採用情報</a></li>
+          <li class="footer-nav-item"><a href="contact.html" class="footer-nav-a">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
