--- a/20220518tomita/blog.html
+++ b/20220518tomita/blog.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/blog.css">
 </head>
+
 <body>
+  
   <header class="header flex__item">
     <div class="header__logo">
       <a href="index.html">
@@ -37,7 +39,7 @@
 
     <div id="blog" class="container">
       <div class="flex__item blog-wrap">
-        <a class="blog-wrap__item" href>
+        <a class="blog-wrap__item" href >
           <div class="blog">
             <img src="img/blog.png" alt>
             <p class="blog-data">2019/07/17</p>
@@ -82,7 +84,7 @@
       </div>
     </div>
   
-    <div class="contact">
+    <div id="contact">
       <h2 class="contact__ttl">お問い合わせ</h2>
       <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
       <a href="contact.html" class="contact__btn">お問い合わせ</a>
