--- a/20220518tomita/company.html
+++ b/20220518tomita/company.html
@@ -13,81 +13,87 @@
 
 <body>
 
-  <header class="header">
-    <h1 class="header-ttl">
+  <header class="header flex__item">
+    <div class="header__logo">
       <a href="index.html">
-        <img src="./img/logo.png" alt>
+        <img src="img/logo.png" alt>
       </a>
-    </h1>
+    </div>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="sservice.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+        <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
+        <li class="header-nav-item"><a href="sservice.html" class="header-nav-a">事業内容</a></li>
+        <li class="header-nav-item"><a href="news.html" class="header-nav-a">ニュース</a></li>
+        <li class="header-nav-item"><a href="blog.html" class="header-nav-a">社員ブログ</a></li>
+        <li class="header-nav-item"><a href="company.html" class="header-nav-a">会社概要</a></li>
+        <li class="header-nav-item"><a href="recruit.html" class="header-nav-a">採用情報</a></li>
+        <li class="header-nav-item"><a href="contact.html" class="header-nav-a">お問い合わせ</a></li>
       </ul>
     </nav>
   </header>
 
-
-  <h1 service__ttl>会社概要</h1>
-
-  <table class="company-table">
-    <tbody>
-      <tr>
-        <th class="company-table__th">会社名</th>
-        <td class="copmany-table__td">株式会社TECH</td>
-      </tr>
-      <tr>
-        <th class="company-table__th">代表者名</th>
-        <td class="copmany-table__td">山田太郎</td>
-      </tr>
-      <tr>
-        <th class="company-table__th">所在地</th>
-        <td class="copmany-table__td">東京都渋谷区神宮前</td>
-      </tr>
-      <tr>
-        <th class="company-table__th">設立</th>
-        <td class="copmany-table__td">2019/07/17</td>
-      <tr>
-        <th class="company-table__th">従業員数</th>
-        <td class="copmany-table__td">100人</td>
-      </tr>
-      <tr>
-        <th class="company-table__th">資本金</th>
-        <td class="copmany-table__td">1000万円</td>
-      </tr>
-    </tbody>
-  </table>
-
-
-
-  <div class="contact">
-    <h2 class="contact__ttl">お問い合わせ</h2>
-    <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
-    <a href="contact.html" class="contact__btn">お問い合わせ</a>
+  <div class="common__ttl">
+    <h1 class="service__ttl">会社概要</h1>
   </div>
-  
-  <footer class="footer">
-    <div class="footer-inner">
-      <small class="copyright">&copy;2020 TECH inc</small>
-      <nav class="footer-nav">
-        <ul class="footer-nav-list">
-          <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-          <li class="header-nav-item"><a href="service.html">事業内容</a></li>
-          <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-          <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-          <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-          <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-          <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
-        </ul>
-      </nav>
+　
+    <div class="container">
+      <table class="company-table">
+        <tbody>
+          <tr>
+            <th class="company-table__th">会社名</th>
+            <td class="copmany-table__td">株式会社TECH</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">代表者名</th>
+            <td class="copmany-table__td">山田太郎</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">所在地</th>
+            <td class="copmany-table__td">東京都渋谷区神宮前</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">設立</th>
+            <td class="copmany-table__td">2019/07/17</td>
+          <tr>
+            <th class="company-table__th">従業員数</th>
+            <td class="copmany-table__td">100人</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">資本金</th>
+            <td class="copmany-table__td">1000万円</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  </footer>
+
+
+
+    <div id="contact">
+      <h2 class="contact__ttl">お問い合わせ</h2>
+      <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+      <a href="contact.html" class="contact__btn">お問い合わせ</a>
+    </div>
+
   
+  
+    <div class="container">
+      <footer class="footer">
+        <div class="footer-inner">
+          <small class="copyright">&copy;2020 TECH inc</small>
+          <nav class="footer-nav">
+            <ul class="footer-nav-list">
+              <li class="footer-nav-item"><a href="index.html" class="footer-nav-a">ホーム</a></li>
+              <li class="footer-nav-item"><a href="service.html" class="footer-nav-a">事業内容</a></li>
+              <li class="footer-nav-item"><a href="news.html" class="footer-nav-a">ニュース</a></li>
+              <li class="footer-nav-item"><a href="blog.html" class="footer-nav-a">社員ブログ</a></li>
+              <li class="footer-nav-item"><a href="company.html" class="footer-nav-a">会社概要</a></li>
+              <li class="footer-nav-item"><a href="recruit.html" class="footer-nav-a">採用情報</a></li>
+              <li class="footer-nav-item"><a href="contact.html" class="footer-nav-a">お問い合わせ</a></li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
+    </div>
   </body>
   
   </html>
