--- a/20220518tomita/contact.html
+++ b/20220518tomita/contact.html
@@ -8,20 +8,20 @@
   <title>service</title>
 
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/service.css">
+  <link rel="stylesheet" href="css/contact.css">
 </head>
 
 <body>
 
-  <header class="header">
-    <h1 class="header-ttl">
+  <header class="header flex__item">
+    <div class="header__logo">
       <a href="index.html">
-        <img src="./img/logo.png" alt>
+        <img src="img/logo.png" alt>
       </a>
-    </h1>
+    </div>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item"><a href="index.html">ホーム</a></li>
+        <li class="header-nav-item fle"><a href="index.html">ホーム</a></li>
         <li class="header-nav-item"><a href="sservice.html">事業内容</a></li>
         <li class="header-nav-item"><a href="news.html">ニュース</a></li>
         <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
@@ -32,28 +32,34 @@
     </nav>
   </header>
 
-  <h1 contact__ttl>お問い合わせ</h1>
+  <main>
+    <div class="common__ttl">
+      <h1 class="contact__ttl">お問い合わせ</h1>
+    </div>
 
-  <form class="form" name="contact" method="POST">
-    <div class="form-item">
-      <p class="form-item-label">会社名</p>
-      <input type="text" name="company" class="form-item-input">
-    </div>
-    <div class="form-item">
-      <p class="form-item-label">お名前<span class="form-item-label-required">*</span></p>
-      <input type="text" name="name" class="form-item-input">
-    </div>
-    <div class="form-item">
-      <p class="form-item-label">メールアドレス<span class="form-item-label-required">*</span></p>
-      <input type="e-mail" name="e-mail" class="form-item-input">
-    </div>
-    <div class="form-item">
-      <p class="form-item-label">お問い合わせ内容<span class="form-item-label-required">*</span></p>
-      <textarea name="textarea" class="form-item-textarea"></textarea>
-    </div>
-    <input type="submit" class="form-bth" value="申し込み">
+    <div class="container">
+      <form class="form" name="contact" method="POST">
+        <div class="form-item">
+          <p class="form-item-label">会社名</p>
+          <input type="text" name="company" class="form-item-input">
+        </div>
+        <div class="form-item">
+          <p class="form-item-label">お名前<span class="form-item-label-required">*</span></p>
+          <input type="text" name="name" class="form-item-input">
+        </div>
+        <div class="form-item">
+          <p class="form-item-label">メールアドレス<span class="form-item-label-required">*</span></p>
+          <input type="e-mail" name="e-mail" class="form-item-input">
+        </div>
+        <div class="form-item">
+          <p class="form-item-label">お問い合わせ内容<span class="form-item-label-required">*</span></p>
+          <textarea name="textarea" class="form-item-textarea"></textarea>
+        </div>
+        <input type="submit" class="form__btn" value="お申し込み">
+        </form>
+      </div>
 
-  </form>
+    </main>
 
   <footer class="footer">
     <div class="footer-inner">
