--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-  <header class="header flex__item">
+  <header class="header flex__item" >
     <div class="header__logo">
       <a href="index.html">
         <img src="img/logo.png" alt>
       </a>
     </div>
-    <nav class="header-nav">
+    <nav class="header-nav" id="nav">
       <ul class="header-nav-list">
         <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
         <li class="header-nav-item"><a href="sservice.html" class="header-nav-a">事業内容</a></li>
@@ -29,6 +29,11 @@
         <li class="header-nav-item"><a href="contact.html" class="header-nav-a">お問い合わせ</a></li>
       </ul>
     </nav>
+    <div class="menu" id="menu">
+      <span class="menu__line--top"></span>
+      <span class="menu__line--middle"></span>
+      <span class="menu__line--bottom"></span>
+    </div>
   </header>
 
   <main>
