--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -18,7 +18,7 @@
         <img src="img/logo.png" alt>
       </a>
     </div>
-    <nav class="header-nav" id="nav">
+    <nav class="header-nav">
       <ul class="header-nav-list">
         <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
         <li class="header-nav-item"><a href="sservice.html" class="header-nav-a">事業内容</a></li>
@@ -29,12 +29,27 @@
         <li class="header-nav-item"><a href="contact.html" class="header-nav-a">お問い合わせ</a></li>
       </ul>
     </nav>
+
+    <nav class="nav" id="nav">
+      <ul>
+        <li ><a href="index.html">ホーム</a></li>
+        <li ><a href="sservice.html">事業内容</a></li>
+        <li><a href="news.html" >ニュース</a></li>
+        <li><a href="blog.html">社員ブログ</a></li>
+        <li><a href="company.html">会社概要</a></li>
+        <li><a href="recruit.html">採用情報</a></li>
+        <li><a href="contact.html">お問い合わせ</a></li>
+      </ul>
+    </nav>
+
     <div class="menu" id="menu">
       <span class="menu__line--top"></span>
       <span class="menu__line--middle"></span>
       <span class="menu__line--bottom"></span>
     </div>
+
   </header>
+
 
   <main>
     <div class="firstview">
