--- a/20220518tomita/service.html
+++ b/20220518tomita/service.html
@@ -36,7 +36,8 @@
     <h1 class="service__ttl">事業内容</h1> 
     </div>
     
-    <div class="container">
+    <div class="container padding__height">
+
       <div class="flex__item service__item">
         <div class="service__item-img">
           <img src="img/service1.png" alt>
@@ -58,7 +59,7 @@
       </div>
       
       <div class="flex__item service__item">
-        <div class="servic__item-img">
+        <div class="service__item-img">
           <img src="img/service3.png" alt>
         </div>
         <div class="service__item-content">
