--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -33,7 +33,7 @@
     <nav class="nav" id="nav">
       <ul>
         <li ><a href="index.html">ホーム</a></li>
-        <li ><a href="sservice.html">事業内容</a></li>
+        <li ><a href="service.html">事業内容</a></li>
         <li><a href="news.html" >ニュース</a></li>
         <li><a href="blog.html">社員ブログ</a></li>
         <li><a href="company.html">会社概要</a></li>
@@ -60,13 +60,15 @@
         </div>
       </div>
       <div class="secondview__content">
+        <div class="container padding__height" >
         <h2 class="secondview__content-eyecatch">株式会社TECHの想い</h2>
-        <p class="secondview__content-sup-copy">あらゆる産業おいて、新たなデジタル技術を使ってこれまでにないビジネスモデルを展開する新規参入者が登場し、ゲームチェンジが起ころうとしています。こうした中で、各企業は、競争力維持・強化のために、DXを迅速に進めていくことが求められます。しかし、DXにおいて投資コストは非常にかかります。株式会社TECHでは独自のオペレーションと人材教育により、他社よりも価格を抑えた開発を行います。</p>
+          <p class="secondview__content-sup-copy">あらゆる産業おいて、新たなデジタル技術を使ってこれまでにないビジネスモデルを展開する新規参入者が登場し、ゲームチェンジが起ころうとしています。こうした中で、各企業は、競争力維持・強化のために、DXを迅速に進めていくことが求められます。しかし、DXにおいて投資コストは非常にかかります。株式会社TECHでは独自のオペレーションと人材教育により、他社よりも価格を抑えた開発を行います。</p>
+        </div>
       </div>
     </div>
 
     <div id="service">
-      <div class="container">
+      <div class="container padding__height">
         <h2 class="common__ttl">サービス</h2>
         <div class="flex__item service-wrap">
             <div class="service-wrap__item">
@@ -95,29 +97,27 @@
     </div>
 
     <div id="news">
-      <div class="container">
+      <div class="container padding__height">
         <div class="flex__item">
           <h2 class="common__ttl">ニュース</h2>
           <a href="news.html" class="news__btn">ニュース一覧を見る</a>
         </div>
-        <ul class="news__list">
-          <li class="news__list-item">
-            <span class="news__list-data">2019/07/17</span>
-            <span class="news__list-detail">会社を創業しました。</span>
-          </li>
-          <li class="news__list-item">
-            <span class="news__list-data">2020/04/01</span>
-            <span class="news__list-detail">資金調達を行いました。</span>
-          </li>
-          <li class="news__list-item">
+        <a href="news.html" class="news__list-btn">
+          <span class="news__list-data">2019/07/17</span>
+          <span class="news__list-detail">会社を創業しました。</span>
+        </a>
+        <a href="news.html" class="news__list-btn">
+          <span class="news__list-data">2019/04/01</span>
+          <span class="news__list-detail">資金調達を行いました。</span>
+        </a>
+        <a href="news.html" class="news__list-btn">
           <span class="news__list-data">2020/10/01</span>
           <span class="news__list-detail">東京新聞に掲載されました。</span>
-          </li>
-        </ul>
+        </a>
       </div>
     </div>
 
-    <div id="blog" class="container">
+    <div id="blog" class="container padding__height">
       <h2 class="common__ttl">社員ブログ</h2>
       <div class="flex__item blog-wrap">
         <a class="blog-wrap__item" href>
@@ -145,7 +145,7 @@
       <a href="blog.html" class="blog__btn">社員ブログ一覧を見る</a>
     </div>
 
-    <div id="company-recruit">
+    <div id="company-recruit" class="padding__height">
       <div class="flex__item">
         <a href="company.html" class="flex__item-company">
           <h2 class="company__ttl">会社概要</h2>
@@ -156,7 +156,7 @@
       </div>
     </div>
    
-    <div id="contact">
+    <div id="contact" class="padding__height">
       <h2 class="common__ttl">お問い合わせ</h2>
       <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
       <a href="contact.html" class="contact__btn">お問い合わせ</a>
@@ -182,5 +182,5 @@
     </div>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="main.js"></script>
 </body>
