--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -32,13 +32,13 @@
 
     <nav class="nav" id="nav">
       <ul>
-        <li ><a href="index.html">ホーム</a></li>
-        <li ><a href="service.html">事業内容</a></li>
-        <li><a href="news.html" >ニュース</a></li>
-        <li><a href="blog.html">社員ブログ</a></li>
-        <li><a href="company.html">会社概要</a></li>
-        <li><a href="recruit.html">採用情報</a></li>
-        <li><a href="contact.html">お問い合わせ</a></li>
+        <li ><a href="index.html" class="nav-nav">ホーム</a></li>
+        <li ><a href="service.html" class="nav-nav">事業内容</a></li>
+        <li><a href="news.html" class="nav-nav">ニュース</a></li>
+        <li><a href="blog.html" class="nav-nav">社員ブログ</a></li>
+        <li><a href="company.html" class="nav-nav">会社概要</a></li>
+        <li><a href="recruit.html" class="nav-nav">採用情報</a></li>
+        <li><a href="contact.html" class="nav-nav">お問い合わせ</a></li>
       </ul>
     </nav>
 
@@ -177,6 +177,22 @@
           <li class="footer-nav-item"><a href="company.html" class="footer-nav-a">会社概要</a></li>
           <li class="footer-nav-item"><a href="recruit.html" class="footer-nav-a">採用情報</a></li>
           <li class="footer-nav-item"><a href="contact.html" class="footer-nav-a">お問い合わせ</a></li>
+        </ul>
+      </nav>
+    </div>
+    
+
+    <div class="footer-inner-min wrap">
+      <small class="copyright">&copy;2020 TECH inc</small>
+      <nav class="footer-nav-min">
+        <ul class="footer-nav-list-min">
+          <li class="footer-nav-item-min"><a href="index.html" class="footer-nav-a">ホーム</a></li>
+          <li class="footer-nav-item-min"><a href="service.html" class="footer-nav-a">事業内容</a></li>
+          <li class="footer-nav-item-min"><a href="news.html" class="footer-nav-a">ニュース</a></li>
+          <li class="footer-nav-item-min"><a href="blog.html" class="footer-nav-a">社員ブログ</a></li>
+          <li class="footer-nav-item-min"><a href="company.html" class="footer-nav-a">会社概要</a></li>
+          <li class="footer-nav-item-min"><a href="recruit.html" class="footer-nav-a">採用情報</a></li>
+          <li class="footer-nav-item-min"><a href="contact.html" class="footer-nav-a">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
