--- a/20220518tomita/service.html
+++ b/20220518tomita/service.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header class="header flex__item">
+  <header class="header flex__item flex__space">
     <div class="header__logo">
       <a href="index.html">
         <img src="img/logo.png" alt>
