--- a/20220518tomita/index.html
+++ b/20220518tomita/index.html
@@ -21,7 +21,7 @@
     <nav class="header-nav">
       <ul class="header-nav-list">
         <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
-        <li class="header-nav-item"><a href="sservice.html" class="header-nav-a">事業内容</a></li>
+        <li class="header-nav-item"><a href="service.html" class="header-nav-a">事業内容</a></li>
         <li class="header-nav-item"><a href="news.html" class="header-nav-a">ニュース</a></li>
         <li class="header-nav-item"><a href="blog.html" class="header-nav-a">社員ブログ</a></li>
         <li class="header-nav-item"><a href="company.html" class="header-nav-a">会社概要</a></li>
