--- a/20220518tomita/contact.html
+++ b/20220518tomita/contact.html
@@ -21,15 +21,34 @@
     </div>
     <nav class="header-nav">
       <ul class="header-nav-list">
-        <li class="header-nav-item fle"><a href="index.html">ホーム</a></li>
-        <li class="header-nav-item"><a href="sservice.html">事業内容</a></li>
-        <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-        <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-        <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-        <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+        <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
+        <li class="header-nav-item"><a href="service.html" class="header-nav-a">事業内容</a></li>
+        <li class="header-nav-item"><a href="news.html" class="header-nav-a">ニュース</a></li>
+        <li class="header-nav-item"><a href="blog.html" class="header-nav-a">社員ブログ</a></li>
+        <li class="header-nav-item"><a href="company.html" class="header-nav-a">会社概要</a></li>
+        <li class="header-nav-item"><a href="recruit.html" class="header-nav-a">採用情報</a></li>
+        <li class="header-nav-item"><a href="contact.html" class="header-nav-a">お問い合わせ</a></li>
       </ul>
     </nav>
+  
+    <nav class="nav" id="nav">
+      <ul>
+        <li><a href="index.html" class="nav-nav">ホーム</a></li>
+        <li><a href="service.html" class="nav-nav">事業内容</a></li>
+        <li><a href="news.html" class="nav-nav">ニュース</a></li>
+        <li><a href="blog.html" class="nav-nav">社員ブログ</a></li>
+        <li><a href="company.html" class="nav-nav">会社概要</a></li>
+        <li><a href="recruit.html" class="nav-nav">採用情報</a></li>
+        <li><a href="contact.html" class="nav-nav">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  
+    <div class="menu" id="menu">
+      <span class="menu__line--top"></span>
+      <span class="menu__line--middle"></span>
+      <span class="menu__line--bottom"></span>
+    </div>
+  
   </header>
 
   <main>
@@ -37,7 +56,7 @@
       <h1 class="contact__ttl">お問い合わせ</h1>
     </div>
 
-    <div class="container">
+    <div class="container padding__height">
       <form class="form" name="contact" method="POST">
         <div class="form-item">
           <p class="form-item-label">会社名</p>
@@ -61,26 +80,41 @@
 
     </main>
 
-  <footer class="footer">
-    <div class="footer-inner">
-      <small class="copyright">&copy;2020 TECH inc</small>
-      <nav class="footer-nav">
-        <ul class="footer-nav-list">
-          <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-          <li class="header-nav-item"><a href="service.html">事業内容</a></li>
-          <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-          <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-          <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-          <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-          <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
-        </ul>
-      </nav>
-    </div>
-  </footer>
+    <footer class="footer">
+      <div class="footer-inner">
+        <small class="copyright">&copy;2020 TECH inc</small>
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="index.html" class="footer-nav-a">ホーム</a></li>
+            <li class="footer-nav-item"><a href="service.html" class="footer-nav-a">事業内容</a></li>
+            <li class="footer-nav-item"><a href="news.html" class="footer-nav-a">ニュース</a></li>
+            <li class="footer-nav-item"><a href="blog.html" class="footer-nav-a">社員ブログ</a></li>
+            <li class="footer-nav-item"><a href="company.html" class="footer-nav-a">会社概要</a></li>
+            <li class="footer-nav-item"><a href="recruit.html" class="footer-nav-a">採用情報</a></li>
+            <li class="footer-nav-item"><a href="contact.html" class="footer-nav-a">お問い合わせ</a></li>
+          </ul>
+        </nav>
+      </div>
 
+
+      <div class="footer-inner-min wrap">
+        <small class="copyright">&copy;2020 TECH inc</small>
+        <nav class="footer-nav-min">
+          <ul class="footer-nav-list-min">
+            <li class="footer-nav-item-min"><a href="index.html" class="footer-nav-a">ホーム</a></li>
+            <li class="footer-nav-item-min"><a href="service.html" class="footer-nav-a">事業内容</a></li>
+            <li class="footer-nav-item-min"><a href="news.html" class="footer-nav-a">ニュース</a></li>
+            <li class="footer-nav-item-min"><a href="blog.html" class="footer-nav-a">社員ブログ</a></li>
+            <li class="footer-nav-item-min"><a href="company.html" class="footer-nav-a">会社概要</a></li>
+            <li class="footer-nav-item-min"><a href="recruit.html" class="footer-nav-a">採用情報</a></li>
+            <li class="footer-nav-item-min"><a href="contact.html" class="footer-nav-a">お問い合わせ</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
 
   
-
+  <script src="main.js"></script>
 </body>
 
 </html>
