--- a/20220518tomita/recruit.html
+++ b/20220518tomita/recruit.html
@@ -12,105 +12,137 @@
 </head>
 
 <body>
+    <header class="header flex__item">
+      <div class="header__logo">
+        <a href="index.html">
+          <img src="img/logo.png" alt>
+        </a>
+      </div>
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
+          <li class="header-nav-item"><a href="service.html" class="header-nav-a">事業内容</a></li>
+          <li class="header-nav-item"><a href="news.html" class="header-nav-a">ニュース</a></li>
+          <li class="header-nav-item"><a href="blog.html" class="header-nav-a">社員ブログ</a></li>
+          <li class="header-nav-item"><a href="company.html" class="header-nav-a">会社概要</a></li>
+          <li class="header-nav-item"><a href="recruit.html" class="header-nav-a">採用情報</a></li>
+          <li class="header-nav-item"><a href="contact.html" class="header-nav-a">お問い合わせ</a></li>
+        </ul>
+      </nav>
 
-  <header class="header flex__item">
-    <div class="header__logo">
-      <a href="index.html">
-        <img src="img/logo.png" alt>
-      </a>
+      <nav class="nav" id="nav">
+        <ul>
+          <li><a href="index.html" class="nav-nav">ホーム</a></li>
+          <li><a href="service.html" class="nav-nav">事業内容</a></li>
+          <li><a href="news.html" class="nav-nav">ニュース</a></li>
+          <li><a href="blog.html" class="nav-nav">社員ブログ</a></li>
+          <li><a href="company.html" class="nav-nav">会社概要</a></li>
+          <li><a href="recruit.html" class="nav-nav">採用情報</a></li>
+          <li><a href="contact.html" class="nav-nav">お問い合わせ</a></li>
+        </ul>
+      </nav>
+
+      <div class="menu" id="menu">
+        <span class="menu__line--top"></span>
+        <span class="menu__line--middle"></span>
+        <span class="menu__line--bottom"></span>
+      </div>
+
+    </header>
+
+    <div class="common__ttl">
+      <h1 class="recruit1__ttl">採用情報</h1>
     </div>
-    <nav class="header-nav">
-      <ul class="header-nav-list">
-        <li class="header-nav-item fle"><a href="index.html" class="header-nav-a">ホーム</a></li>
-        <li class="header-nav-item"><a href="sservice.html" class="header-nav-a">事業内容</a></li>
-        <li class="header-nav-item"><a href="news.html" class="header-nav-a">ニュース</a></li>
-        <li class="header-nav-item"><a href="blog.html" class="header-nav-a">社員ブログ</a></li>
-        <li class="header-nav-item"><a href="company.html" class="header-nav-a">会社概要</a></li>
-        <li class="header-nav-item"><a href="recruit.html" class="header-nav-a">採用情報</a></li>
-        <li class="header-nav-item"><a href="contact.html" class="header-nav-a">お問い合わせ</a></li>
-      </ul>
-    </nav>
-  </header>
+    　
+    <div id="recruit" class="container padding__height" >
 
-  <div class="common__ttl">
-    <h1 class="recruit__ttl">採用情報</h1>
-  </div>
-  　
-  <div id="recruit" class="container">
+      <div class="new">
+        <div class="recruit__ttl">新卒採用</div>
+        <p class="content">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
+        <table class="recruit-table" border="1">
+          <tr>
+            <th class="company-table__th">内容</th>
+            <td class="copmany-table__td">ITコンサルと開発</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">勤務地</th>
+            <td class="copmany-table__td">東京都渋谷区神宮前</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">給与</th>
+            <td class="copmany-table__td">30万円～</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">福利厚生</th>
+            <td class="copmany-table__td">家賃補助</td>
+          </tr>
+        </table>
+      </div>
 
-    <div class="new">
-      <h2 class="new__ttl">新卒採用</h2>
-      <p class="new__content">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
-      <table>
-        <tr>
-          <th class="company-table__th">内容</th>
-          <td class="copmany-table__td">ITコンサルと開発</td>
-        </tr>
-        <tr>
-          <th class="company-table__th">勤務地</th>
-          <td class="copmany-table__td">東京都渋谷区神宮前</td>
-        </tr>
-        <tr>
-          <th class="company-table__th">給与</th>
-          <td class="copmany-table__td">30万円～</td>
-        </tr>
-        <tr>
-          <th class="company-table__th">福利厚生</th>
-          <td class="copmany-table__td">家賃補助</td>
-        </tr>
-      </table>
+      <div class="carrier">
+        <div class="recruit__ttl">キャリア採用</div>
+        <p class="content">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
+        <table border="1" class="recruit-table" >
+          <tr>
+            <th class="company-table__th">内容</th>
+            <td class="copmany-table__td">ITコンサルと開発</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">勤務地</th>
+            <td class="copmany-table__td">東京都渋谷区神宮前</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">給与</th>
+            <td class="copmany-table__td">50万円～</td>
+          </tr>
+          <tr>
+            <th class="company-table__th">福利厚生</th>
+            <td class="copmany-table__td">家賃補助</td>
+          </tr>
+        </table>
+      </div>
+
     </div>
 
-    <div class="carrier">
-      <h2 class="carrier__ttl">キャリア採用</h2>
-      <p class="new__content">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
-      <table class="recruit-table">
-        <tr>
-          <th class="company-table__th">内容</th>
-          <td class="copmany-table__td">ITコンサルと開発</td>
-        </tr>
-        <tr>
-          <th class="company-table__th">勤務地</th>
-          <td class="copmany-table__td">東京都渋谷区神宮前</td>
-        </tr>
-        <tr>
-          <th class="company-table__th">給与</th>
-          <td class="copmany-table__td">50万円～</td>
-        </tr>
-        <tr>
-          <th class="company-table__th">福利厚生</th>
-          <td class="copmany-table__td">家賃補助</td>
-        </tr>
-      </table>
+    <div id="contact" class="padding__height">
+      <h2 class="contact__ttl">お問い合わせ</h2>
+      <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+      <a href="contact.html" class="contact__btn">お問い合わせ</a>
     </div>
 
-  </div>
-
-  <div id="contact">
-    <h2 class="contact__ttl">お問い合わせ</h2>
-    <p class="cotact__content">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
-    <a href="contact.html" class="contact__btn">お問い合わせ</a>
-  </div>
-
-  <div class="container">
     <footer class="footer">
       <div class="footer-inner">
         <small class="copyright">&copy;2020 TECH inc</small>
         <nav class="footer-nav">
           <ul class="footer-nav-list">
-            <li class="header-nav-item"><a href="index.html">ホーム</a></li>
-            <li class="header-nav-item"><a href="service.html">事業内容</a></li>
-            <li class="header-nav-item"><a href="news.html">ニュース</a></li>
-            <li class="header-nav-item"><a href="blog.html">社員ブログ</a></li>
-            <li class="header-nav-item"><a href="company.html">会社概要</a></li>
-            <li class="header-nav-item"><a href="recruit.html">採用情報</a></li>
-            <li class="header-nav-item"><a href="contact.html">お問い合わせ</a></li>
+            <li class="footer-nav-item"><a href="index.html" class="footer-nav-a">ホーム</a></li>
+            <li class="footer-nav-item"><a href="service.html" class="footer-nav-a">事業内容</a></li>
+            <li class="footer-nav-item"><a href="news.html" class="footer-nav-a">ニュース</a></li>
+            <li class="footer-nav-item"><a href="blog.html" class="footer-nav-a">社員ブログ</a></li>
+            <li class="footer-nav-item"><a href="company.html" class="footer-nav-a">会社概要</a></li>
+            <li class="footer-nav-item"><a href="recruit.html" class="footer-nav-a">採用情報</a></li>
+            <li class="footer-nav-item"><a href="contact.html" class="footer-nav-a">お問い合わせ</a></li>
+          </ul>
+        </nav>
+      </div>
+
+
+      <div class="footer-inner-min wrap">
+        <small class="copyright">&copy;2020 TECH inc</small>
+        <nav class="footer-nav-min">
+          <ul class="footer-nav-list-min">
+            <li class="footer-nav-item-min"><a href="index.html" class="footer-nav-a">ホーム</a></li>
+            <li class="footer-nav-item-min"><a href="service.html" class="footer-nav-a">事業内容</a></li>
+            <li class="footer-nav-item-min"><a href="news.html" class="footer-nav-a">ニュース</a></li>
+            <li class="footer-nav-item-min"><a href="blog.html" class="footer-nav-a">社員ブログ</a></li>
+            <li class="footer-nav-item-min"><a href="company.html" class="footer-nav-a">会社概要</a></li>
+            <li class="footer-nav-item-min"><a href="recruit.html" class="footer-nav-a">採用情報</a></li>
+            <li class="footer-nav-item-min"><a href="contact.html" class="footer-nav-a">お問い合わせ</a></li>
           </ul>
         </nav>
       </div>
     </footer>
-  </div>
-
+  <script src="main.js"></script>
 </body>
 
 </html>
