--- a/20220518tomita/recruit.html
+++ b/20220518tomita/recruit.html
@@ -82,7 +82,7 @@
       <div class="carrier">
         <div class="recruit__ttl">キャリア採用</div>
         <p class="content">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
-        <table border="1" class="recruit-table" >
+        <table class="recruit-table" >
           <tr>
             <th class="company-table__th">内容</th>
             <td class="copmany-table__td">ITコンサルと開発</td>
